[package]
name = "rummage"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Joe Roberts"]
description = "A simple and opinionated environment collector"
repository = "https://github.com/Joey9801/rummage-rs"
documentation = "https://docs.rs/rummage"
keywords = ["environment", "collector", "cpuid", "system"]
categories = ["development-tools::debugging"]

[dependencies]
git-version = "0.3.5"
raw-cpuid = "10.7.0"
sys-info = "0.9.1"
tracing = "0.1.37"

[build-dependencies]
rustc_version = "0.4.0"
